tests/miniJava/neg/004859_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] class ) { return 0 ; } }
